SERVER-66869 Get rid of the multi DB locking capability

GitOrigin-RevId: c7c4ee67433e3ba4982f8bde00b7c82e755de5d0